--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
        
       </div>
       <div class="marquee">
-        <div>REFLECTIONS OF RESILIENCE || E-SUMMIT’24 ||REFLECTIONS OF RESILIENCE || E-SUMMIT’24 || REFLECTIONS OF RESILIENCE || E-SUMMIT’24 || REFLECTIONS OF RESILIENCE || E-SUMMIT’24 ||</div>
-        <div>REFLECTIONS OF RESILIENCE || E-SUMMIT’24 ||REFLECTIONS OF RESILIENCE || E-SUMMIT’24 || REFLECTIONS OF RESILIENCE || E-SUMMIT’24 || REFLECTIONS OF RESILIENCE || E-SUMMIT’24 ||</div>
+        <div>REFLECTIONS OF RESILIENCE • E-SUMMIT’24 • REFLECTIONS OF RESILIENCE • E-SUMMIT’24 • REFLECTIONS OF RESILIENCE • E-SUMMIT’24 • REFLECTIONS OF RESILIENCE • E-SUMMIT’24 •</div>
+        <div>REFLECTIONS OF RESILIENCE • E-SUMMIT’24 •REFLECTIONS OF RESILIENCE • E-SUMMIT’24 • REFLECTIONS OF RESILIENCE • E-SUMMIT’24 • REFLECTIONS OF RESILIENCE • E-SUMMIT’24 •</div>
 
     </div>
 
@@ -301,9 +301,14 @@
     <section id="services" >
       <h1>What we do</h1>
       <div class="container">
+
         <div class="card_container1 service-grid-container ">
           <div class="cardL service-grid-item ">
+
+            <div class="card-overlay"></div>
+
             <div class="card bg-transparent">
+
               <h2 class="card-title text-white" >StartUp Expo</h2>
               <div class="card-body " >
                 <!-- <h5 class="card-title" style="margin: 0;">Card title</h5> -->
@@ -316,6 +321,8 @@
             </div>
           </div>
         <div class="cardM service-grid-item">
+          <div class="card-overlay"></div>
+
           <div class="card bg-transparent" >
             <h2 class="card-title text-white">Upstart</h2>
 
@@ -329,6 +336,8 @@
           </div>
         </div>
       <div class="cardR  service-grid-item">
+        <div class="card-overlay"></div>
+
         <div class="card bg-transparent" >
           <h2 class="card-title text-white">Networking Dinner</h2>
           <div class="card-body ">
