--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </div>
        
       </div>
-      <div class="marquee" style="background-color: black;">
+      <div class="marquee" >
         <div style="font-weight: 700; color: #711D8F;">REFLECTIONS OF RESILIENCE • E-SUMMIT’24 • REFLECTIONS OF RESILIENCE • E-SUMMIT’24 • REFLECTIONS OF RESILIENCE • E-SUMMIT’24 • REFLECTIONS OF RESILIENCE • E-SUMMIT’24 •</div>
         <div style="font-weight: 700; color: #711D8F;">REFLECTIONS OF RESILIENCE • E-SUMMIT’24 •REFLECTIONS OF RESILIENCE • E-SUMMIT’24 • REFLECTIONS OF RESILIENCE • E-SUMMIT’24 • REFLECTIONS OF RESILIENCE • E-SUMMIT’24 •</div>
 
