--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <a class="nav-link  text-white " href="#about">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link  text-white " href="#landing">Sponsors</a>
+                <a class="nav-link  text-white " href="./sponsors.html">Sponsors</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link  text-white " href="#competition">Competition</a>
@@ -98,7 +98,7 @@
                 <a class="nav-link  text-white " href="#speakers">Speakers</a>
               </li>
               <li class="nav-item" >
-                <a class="nav-link  text-white  "href="#merchandise">Merchandise</a>
+                <a class="nav-link  text-white  "href="./merchandise.html">Merchandise</a>
               </li>
               <li class="nav-item" >
                 <a href="https://forms.gle/M9S6N5r7YARXJjCKA" target = "_blank" id="Reg_sm"  class=" nav-link text-black rounded-5 p-2 d-none" style="background: linear-gradient(90deg, #CE32F5 0%, #711D8F 100%);" >Register Now</a> 
@@ -176,9 +176,8 @@
               <div class="card h-100 about_card_des-1 bg-transparent " style=" border: none !important;">
                   <div class="card-body">
                   <h2 class="card-title text-white">WHAT IS E-SUMMIT?</h2>
-                  <p class="card-text" style="text-align: justify ;">WHAT IS
-                    E-SUMMIT?
-                    E-Summit is the flagship event of E-Cell, annually convening academia, venture capitalists, and forward-thinking entrepreneurs. It serves as a platform to showcase entrepreneurial talent through diverse competitions, including business ventures, product design, and social entrepreneurship ideas. Join us to witness innovation and creativity in action, where entrepreneurship finds its home. </p>
+                  <p class="card-text" style="text-align: justify ;">
+                    E-summit is the flagship event of Entrepreneurship-Cell, annually convening academia, venture capitalists, and forward-thinking entrepreneurs.It serves as a platform to showcase entrepreneurial talent through diverse competitions, including business ventures, product design, and social entrepreneurship ideas. Just join us to witness innovation and creativity in action, where entrepreneurship finds its home. </p>
                   </div>
               </div>
               </div>
@@ -492,7 +491,7 @@
       <div class="main-page-speaker-section-content">
           <div class="speaker-see-more">
 
-              <a href="./speakers/speakers.html">
+              <a href="./speakers.html">
                   VIEW MORE
               </a>
           </div>
