--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
           <div class="days_child days_child3" id="minutes" days-target = "Minutes">
           </div>
           </div>
-          <div class="days_text">
+          <!-- <div class="days_text">
             TO GO
-          </div>
+          </div> -->  
        
       </div>
       <div class="marquee" >
