--- a/comp5.html
+++ b/comp5.html
@@ -131,7 +131,7 @@
 
     <!-- Workshop -->
      <section id="workshops"> <!-- TODO -->
-        <div class=" workshop_heading"><h1>Comming Soon</h1>
+        <div class=" workshop_heading"><h1>Coming Soon</h1>
         
      
      </section>
