--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     <section id="events" class="section" style="position: relative; " >
       <!-- <div ><h1>Events</h1></div> -->
         <div class="container" >
-          <div class="parent">
+          <div class="parent"  style=" bottom: 30px; position: relative;">
             <div class="child " >
               <div class="child_count child1" data-target="10" text-target="Workshops" >
               </div>
@@ -297,7 +297,6 @@
 
 
     <!-- services -->
-  
     <section id="services" >
       <h1>What we do</h1>
       <div class="container">
@@ -308,7 +307,6 @@
             <div class="card-overlay"></div>
 
             <div class="card bg-transparent" >
-
               <h2 class="card-title text-white" >Startup Expo</h2>
               <div class="card-body " >
                 <!-- <h5 class="card-title" style="margin: 0;">Card title</h5> -->
